refactor: simplify stream operations by replacing collect with toList in multiple services